@@ -1,47 +1,49 @@
 package com.iot.simulator.controller;
 
-import com.iot.shared.domain.DeviceData;
-import com.iot.shared.domain.components.Location;
-import com.iot.shared.domain.components.Status;
-import com.iot.shared.domain.components.Type;
+import com.iot.simulator.utils.StatisticsUtils;
+import com.iot.contracts.domain.DeviceData;
+import com.iot.contracts.domain.components.Location;
+import com.iot.contracts.domain.components.Status;
+import com.iot.contracts.domain.components.Type;
 
-import java.time.LocalDateTime;
+import java.time.Instant;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Random;
 import java.util.Map;
+import java.util.concurrent.atomic.AtomicLong;
+import java.util.concurrent.ThreadLocalRandom;
+
 
 public class DeviceGenerator {
-    private static long idCounter = 1;
-
-    private static final Random RANDOM = new Random();
+    private static final AtomicLong idCounter = new AtomicLong(1);
 
     private static final Map<Type, String[]> DEVICE_NAMES_BY_TYPE = Map.of(
-            Type.SENSOR_TEMPERATURE, new String[] {
+            Type.SENSOR_TEMPERATURE, new String[]{
                     "TempSensor", "ThermoProbe", "ClimateSensor", "HeatDetector",
                     "TempMonitor", "ThermalSensor", "WeatherStation", "TempGauge"
             },
-            Type.SENSOR_HUMIDITY, new String[] {
+            Type.SENSOR_HUMIDITY, new String[]{
                     "HumiditySensor", "MoistureDetector", "Hygrometer", "HumidityProbe",
                     "WetnessSensor", "DampDetector", "HumidityGauge", "MoistureMonitor"
             },
-            Type.ACTUATOR_LIGHT, new String[] {
+            Type.ACTUATOR_LIGHT, new String[]{
                     "SmartBulb", "LEDStrip", "DimmerSwitch", "LightPanel",
                     "LampController", "SmartLight", "LightStrip", "BulbController"
             },
-            Type.ACTUATOR_LOCK, new String[] {
+            Type.ACTUATOR_LOCK, new String[]{
                     "SmartLock", "DoorLock", "AccessControl", "LockController",
                     "SecurityLock", "KeylessEntry", "DoorActuator", "LockSystem"
             },
-            Type.CAMERA, new String[] {
+            Type.CAMERA, new String[]{
                     "SecurityCam", "IPCamera", "SurveillanceCam", "VideoCamera",
                     "MotionCam", "DoorbellCam", "SecurityEye", "WatchCam"
             },
-            Type.SMART_PLUG, new String[] {
+            Type.SMART_PLUG, new String[]{
                     "SmartOutlet", "PowerPlug", "EnergyMonitor", "SmartSocket",
                     "PowerController", "OutletSwitch", "EnergyPlug", "SmartReceptacle"
             },
-            Type.GATEWAY, new String[] {
+            Type.GATEWAY, new String[]{
                     "SmartHub", "GatewayHub", "ControlCenter", "BridgeHub",
                     "NetworkHub", "IoTGateway", "SmartBridge", "ControlHub"
             });
@@ -54,31 +56,31 @@ public class DeviceGenerator {
     };
 
     private static final Map<Type, String[]> CAPABILITIES_BY_TYPE = Map.of(
-            Type.SENSOR_TEMPERATURE, new String[] {
+            Type.SENSOR_TEMPERATURE, new String[]{
                     "TemperatureSensor", "WiFi", "Bluetooth", "BatteryPowered",
                     "DataLogging", "Alerts", "Calibration", "WeatherResistant"
             },
-            Type.SENSOR_HUMIDITY, new String[] {
+            Type.SENSOR_HUMIDITY, new String[]{
                     "HumiditySensor", "WiFi", "Bluetooth", "BatteryPowered",
                     "DataLogging", "Alerts", "Calibration", "WeatherResistant"
             },
-            Type.ACTUATOR_LIGHT, new String[] {
+            Type.ACTUATOR_LIGHT, new String[]{
                     "WiFi", "Zigbee", "Z-Wave", "Dimmer", "ColorControl",
                     "Scheduling", "VoiceControl", "MotionSensor", "EnergyMonitoring"
             },
-            Type.ACTUATOR_LOCK, new String[] {
+            Type.ACTUATOR_LOCK, new String[]{
                     "WiFi", "Zigbee", "Z-Wave", "Keypad", "Fingerprint",
                     "RFID", "MobileApp", "VoiceControl", "AutoLock", "TamperAlarm"
             },
-            Type.CAMERA, new String[] {
+            Type.CAMERA, new String[]{
                     "WiFi", "Ethernet", "NightVision", "MotionDetection",
                     "AudioRecording", "CloudStorage", "MobileApp", "PTZ", "WeatherResistant"
             },
-            Type.SMART_PLUG, new String[] {
+            Type.SMART_PLUG, new String[]{
                     "WiFi", "Zigbee", "Z-Wave", "EnergyMonitoring", "Scheduling",
                     "VoiceControl", "MobileApp", "OverloadProtection", "Timer"
             },
-            Type.GATEWAY, new String[] {
+            Type.GATEWAY, new String[]{
                     "WiFi", "Ethernet", "Zigbee", "Z-Wave", "Bluetooth",
                     "CloudConnectivity", "MobileApp", "VoiceControl", "Scheduling", "Automation"
             });
@@ -88,73 +90,6 @@ public class DeviceGenerator {
             "Scheduling", "Automation", "EnergyMonitoring", "DataLogging", "Alerts"
     };
 
-    // === Методы для генерации различных распределений ===
-
-    /**
-     * Генерирует значение по нормальному распределению (Box-Muller transform)
-     */
-    private double generateNormal(double mean, double stdDev) {
-        if (RANDOM.nextBoolean()) {
-            double u1 = RANDOM.nextDouble();
-            double u2 = RANDOM.nextDouble();
-            double z0 = Math.sqrt(-2 * Math.log(u1)) * Math.cos(2 * Math.PI * u2);
-            return mean + stdDev * z0;
-        } else {
-            double u1 = RANDOM.nextDouble();
-            double u2 = RANDOM.nextDouble();
-            double z1 = Math.sqrt(-2 * Math.log(u1)) * Math.sin(2 * Math.PI * u2);
-            return mean + stdDev * z1;
-        }
-    }
-
-    /**
-     * Генерирует значение по бета-распределению (упрощенная версия)
-     * Концентрирует значения в центре диапазона
-     */
-    private double generateBeta(double alpha, double beta, double min, double max) {
-        // Упрощенная реализация бета-распределения
-        double u1 = Math.pow(RANDOM.nextDouble(), 1.0 / alpha);
-        double u2 = Math.pow(RANDOM.nextDouble(), 1.0 / beta);
-        double betaValue = u1 / (u1 + u2);
-        return min + betaValue * (max - min);
-    }
-
-    /**
-     * Генерирует значение по экспоненциальному распределению
-     */
-    private double generateExponential(double lambda) {
-        return -Math.log(1 - RANDOM.nextDouble()) / lambda;
-    }
-
-    /**
-     * Генерирует значение по пуассонову распределению
-     */
-    private int generatePoisson(double lambda) {
-        double L = Math.exp(-lambda);
-        double p = 1.0;
-        int k = 0;
-
-        do {
-            k++;
-            p *= RANDOM.nextDouble();
-        } while (p > L);
-
-        return k - 1;
-    }
-
-    /**
-     * Генерирует значение по треугольному распределению
-     */
-    private double generateTriangular(double min, double max, double mode) {
-        double u = RANDOM.nextDouble();
-        double fc = (mode - min) / (max - min);
-
-        if (u < fc) {
-            return min + Math.sqrt(u * (max - min) * (mode - min));
-        } else {
-            return max - Math.sqrt((1 - u) * (max - min) * (max - mode));
-        }
-    }
 
     public List<DeviceData> randomDevices(int count) {
         List<DeviceData> deviceData = new ArrayList<>();
@@ -165,10 +100,11 @@ public class DeviceGenerator {
     }
 
     public DeviceData randomDevice() {
-        long id = idCounter++;
-        Type type = Type.values()[RANDOM.nextInt(Type.values().length)];
+        ThreadLocalRandom random = ThreadLocalRandom.current();
+        long id = idCounter.getAndIncrement();
+        Type type = Type.values()[random.nextInt(Type.values().length)];
         String name = generateRealisticName(type, id);
-        String manufacturer = MANUFACTURERS[RANDOM.nextInt(MANUFACTURERS.length)];
+        String manufacturer = MANUFACTURERS[random.nextInt(MANUFACTURERS.length)];
 
         List<String> capabilities = generateRealisticCapabilities(type);
         Location location = generateRealisticLocation();
@@ -178,8 +114,9 @@ public class DeviceGenerator {
     }
 
     private String generateRealisticName(Type type, long id) {
+        ThreadLocalRandom random = ThreadLocalRandom.current();
         String[] names = DEVICE_NAMES_BY_TYPE.get(type);
-        String baseName = names[RANDOM.nextInt(names.length)];
+        String baseName = names[random.nextInt(names.length)];
 
         // Добавляем номер комнаты или зоны для реалистичности
         String roomSuffix = generateRoomSuffix();
@@ -187,34 +124,36 @@ public class DeviceGenerator {
     }
 
     private String generateRoomSuffix() {
+        ThreadLocalRandom random = ThreadLocalRandom.current();
         String[] rooms = {
                 "LivingRoom", "Bedroom", "Kitchen", "Bathroom", "Garage",
                 "Basement", "Attic", "Office", "Hallway", "DiningRoom",
                 "GuestRoom", "Study", "Laundry", "Pantry", "Closet"
         };
-        return rooms[RANDOM.nextInt(rooms.length)];
+        return rooms[random.nextInt(rooms.length)];
     }
 
     private List<String> generateRealisticCapabilities(Type type) {
+        ThreadLocalRandom random = ThreadLocalRandom.current();
         List<String> result = new ArrayList<>();
         String[] typeCapabilities = CAPABILITIES_BY_TYPE.get(type);
 
         // Используем пуассоново распределение для количества возможностей
         // Среднее значение зависит от типа устройства
         double lambda = getCapabilityLambda(type);
-        int capabilityCount = Math.max(2, Math.min(generatePoisson(lambda), typeCapabilities.length));
+        int capabilityCount = Math.clamp(StatisticsUtils.generatePoisson(lambda), 2, typeCapabilities.length);
 
         // Добавляем возможности специфичные для типа
         while (result.size() < capabilityCount && result.size() < typeCapabilities.length) {
-            String cap = typeCapabilities[RANDOM.nextInt(typeCapabilities.length)];
+            String cap = typeCapabilities[random.nextInt(typeCapabilities.length)];
             if (!result.contains(cap)) {
                 result.add(cap);
             }
         }
 
         // С небольшой вероятностью добавляем дополнительные общие возможности
-        if (RANDOM.nextDouble() < 0.3) {
-            String commonCap = COMMON_CAPABILITIES[RANDOM.nextInt(COMMON_CAPABILITIES.length)];
+        if (random.nextDouble() < 0.3) {
+            String commonCap = COMMON_CAPABILITIES[random.nextInt(COMMON_CAPABILITIES.length)];
             if (!result.contains(commonCap)) {
                 result.add(commonCap);
             }
@@ -242,28 +181,29 @@ public class DeviceGenerator {
         // Z - этаж (0-3 для типичного дома)
 
         // Бета-распределение концентрирует устройства в центре дома
-        double xRaw = generateBeta(2.0, 2.0, 0, 50);
-        double yRaw = generateBeta(2.0, 2.0, 0, 50);
+        double xRaw = StatisticsUtils.generateBeta(2.0, 2.0, 0, 50);
+        double yRaw = StatisticsUtils.generateBeta(2.0, 2.0, 0, 50);
 
         // Этажи распределены по треугольному распределению (больше на первом этаже)
-        double zRaw = generateTriangular(0, 3, 1.0);
+        double zRaw = StatisticsUtils.generateTriangular(0, 3, 1.0);
 
-        int x = Math.max(0, Math.min(49, (int) Math.round(xRaw)));
-        int y = Math.max(0, Math.min(49, (int) Math.round(yRaw)));
-        int z = Math.max(0, Math.min(3, (int) Math.round(zRaw)));
+        int x = Math.clamp((int) Math.round(xRaw), 0, 49);
+        int y = Math.clamp((int) Math.round(yRaw), 0, 49);
+        int z = Math.clamp((int) Math.round(zRaw), 0, 3);
 
         return new Location(x, y, z);
     }
 
     private Status generateRealisticStatus(Type type) {
+        ThreadLocalRandom random = ThreadLocalRandom.current();
         // Используем нормальное распределение для определения онлайн статуса
         // Создаем корреляцию между типом устройства и вероятностью быть онлайн
         double onlineProbability = getOnlineProbability(type);
-        boolean isOnline = RANDOM.nextDouble() < onlineProbability;
+        boolean isOnline = random.nextDouble() < onlineProbability;
 
         int batteryLevel;
         int signalStrength;
-        LocalDateTime lastHeartbeat;
+        Instant lastHeartbeat;
 
         if (isOnline) {
             // Для онлайн устройств используем нормальное распределение
@@ -276,8 +216,8 @@ public class DeviceGenerator {
             }
 
             // Heartbeat распределен экспоненциально (больше недавних)
-            int minutesAgo = (int) Math.min(30, generateExponential(0.1));
-            lastHeartbeat = LocalDateTime.now().minusMinutes(minutesAgo);
+            int minutesAgo = (int) Math.min(30, StatisticsUtils.generateExponential(0.1));
+            lastHeartbeat = Instant.now().minus(minutesAgo, ChronoUnit.MINUTES);
         } else {
             // Для офлайн устройств - коррелированные низкие значения
             batteryLevel = generateOfflineBatteryLevel(type);
@@ -289,8 +229,8 @@ public class DeviceGenerator {
             }
 
             // Heartbeat давно - экспоненциальное распределение
-            int hoursAgo = (int) Math.min(24, generateExponential(0.3));
-            lastHeartbeat = LocalDateTime.now().minusHours(Math.max(1, hoursAgo));
+            int hoursAgo = (int) Math.min(24, StatisticsUtils.generateExponential(0.3));
+            lastHeartbeat = Instant.now().minus(Math.max(1, hoursAgo), ChronoUnit.HOURS);
         }
 
         return new Status(isOnline, batteryLevel, signalStrength, lastHeartbeat);
@@ -312,17 +252,17 @@ public class DeviceGenerator {
     private int generateBatteryLevel(Type type) {
         BatteryDistribution dist = getBatteryDistribution(type);
 
-        double batteryRaw = generateNormal(dist.mean, dist.stdDev);
+        double batteryRaw = StatisticsUtils.generateNormal(dist.mean, dist.stdDev);
 
-        return (int) Math.round(Math.max(0, Math.min(100, batteryRaw)));
+        return (int) Math.round(Math.clamp(batteryRaw, 0, 100));
     }
 
     private int generateOfflineBatteryLevel(Type type) {
         BatteryDistribution dist = getBatteryDistribution(type);
 
-        double batteryRaw = generateNormal(dist.mean * 0.3, dist.stdDev * 0.5);
+        double batteryRaw = StatisticsUtils.generateNormal(dist.mean * 0.3, dist.stdDev * 0.5);
 
-        return (int) Math.round(Math.max(0, Math.min(100, batteryRaw)));
+        return (int) Math.round(Math.clamp(batteryRaw, 0, 100));
     }
 
     private BatteryDistribution getBatteryDistribution(Type type) {
@@ -342,59 +282,61 @@ public class DeviceGenerator {
     private int generateSignalStrength() {
         // Используем нормальное распределение для силы сигнала
         // Среднее 70%, стандартное отклонение 20%
-        double signalRaw = generateNormal(70, 20);
+        double signalRaw = StatisticsUtils.generateNormal(70, 20);
 
-        return (int) Math.round(Math.max(0, Math.min(100, signalRaw)));
+        return (int) Math.round(Math.clamp(signalRaw, 0, 100));
     }
 
     private int generateOfflineSignalStrength() {
         // Для офлайн устройств сигнал обычно слабый
         // Среднее 25%, стандартное отклонение 15%
-        double signalRaw = generateNormal(25, 15);
+        double signalRaw = StatisticsUtils.generateNormal(25, 15);
 
-        return (int) Math.round(Math.max(0, Math.min(100, signalRaw)));
+        return (int) Math.round(Math.clamp(signalRaw, 0, 100));
     }
 
     public DeviceData updateDevice(DeviceData deviceData) {
+        ThreadLocalRandom random = ThreadLocalRandom.current();
         // Update Status
         Status currentStatus = deviceData.status();
         // Simulate small changes
         boolean isOnline = currentStatus.isOnline();
 
         // 1% chance to toggle online/offline
-        if (RANDOM.nextDouble() < 0.01) {
+        if (random.nextDouble() < 0.01) {
             isOnline = !isOnline;
         }
 
         int batteryLevel = currentStatus.batteryLevel();
         // 0.5% chance to decrease battery if online
-        if (isOnline && batteryLevel > 0 && RANDOM.nextDouble() < 0.005) {
+        if (isOnline && batteryLevel > 0 && random.nextDouble() < 0.005) {
             batteryLevel--;
         }
 
         int signalStrength = currentStatus.signalStrength();
         // Fluctuate signal strength +/- 5
         if (isOnline) {
-            int change = RANDOM.nextInt(11) - 5;
-            signalStrength = Math.max(0, Math.min(100, signalStrength + change));
+            int change = random.nextInt(11) - 5;
+            signalStrength = Math.clamp(signalStrength + change, 0, 100);
         }
 
         // Update heartbeat
-        java.time.LocalDateTime lastHeartbeat = isOnline ? java.time.LocalDateTime.now()
+        java.time.Instant lastHeartbeat = isOnline ? java.time.Instant.now()
                 : currentStatus.lastHeartbeat();
 
         Status newStatus = new Status(isOnline, batteryLevel, signalStrength, lastHeartbeat);
-        DeviceData updated = deviceData.withStatus(newStatus);
+        DeviceData updated = deviceData.toBuilder().status(newStatus).build();
 
         // Update Location (Random Walk) - 10% chance to move
-        if (RANDOM.nextDouble() < 0.1) {
+        if (random.nextDouble() < 0.1) {
             Location loc = updated.location();
-            int dx = RANDOM.nextInt(3) - 1; // -1, 0, 1
-            int dy = RANDOM.nextInt(3) - 1;
-            int newX = Math.max(0, Math.min(50, loc.x() + dx));
-            int newY = Math.max(0, Math.min(50, loc.y() + dy));
-            updated = updated.withLocation(new Location(newX, newY, loc.z()));
+            int dx = random.nextInt(3) - 1; // -1, 0, 1
+            int dy = random.nextInt(3) - 1;
+            int newX = Math.clamp(loc.x() + dx, 0, 50);
+            int newY = Math.clamp(loc.y() + dy, 0, 50);
+            updated = updated.toBuilder().location(new Location(newX, newY, loc.z())).build();
         }
         return updated;
     }
 }
+
